feat(provider): add platform, delivery domain models, multi-provider virtual thread aggregation, and configurable timeouts