@@ -1,101 +1,127 @@
 package com.quickbasket.service.provider;
 
+import com.quickbasket.dto.DeliveryEstimate;
 import com.quickbasket.dto.NormalizedProductOffer;
+import com.quickbasket.dto.PlatformType;
 import com.quickbasket.dto.QuickCommerceRawOffer;
 import com.quickbasket.dto.QuickCommerceRawResponse;
-import com.quickbasket.exception.ProviderException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.http.HttpHeaders;
-import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestClient;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.util.Collections;
 import java.util.List;
 
 /**
- * External API provider calling QuickCommerceAPI aggregator using Spring 3.2 RestClient.
+ * Third-party QuickCommerceAPI.com provider integration.
  */
 @Component
 public class QuickCommerceApiProvider implements ProductProvider {
 
     private static final Logger log = LoggerFactory.getLogger(QuickCommerceApiProvider.class);
-    public static final String PROVIDER_CODE = "quickcommerce";
 
     private final RestClient restClient;
-    private final String baseUrl;
-    private final String apiKey;
+    private final String apiToken;
+    private final boolean enabled;
+    private final long timeoutMs;
 
     public QuickCommerceApiProvider(
             RestClient.Builder restClientBuilder,
-            @Value("${quickcommerce.api.base-url:https://quickcommerceapi.com}") String baseUrl,
-            @Value("${quickcommerce.api.key:mock-key}") String apiKey
+            @Value("${quickcommerce.api.base-url:https://api.quickcommerceapi.com}") String baseUrl,
+            @Value("${quickcommerce.api.token:mock-token}") String apiToken,
+            @Value("${quickbasket.providers.quickcommerce.enabled:false}") boolean enabled,
+            @Value("${quickbasket.providers.quickcommerce.timeout-ms:1500}") long timeoutMs
     ) {
-        this.baseUrl = baseUrl;
-        this.apiKey = apiKey;
-        this.restClient = restClientBuilder
-                .baseUrl(baseUrl)
-                .defaultHeader(HttpHeaders.AUTHORIZATION, "Bearer " + apiKey)
-                .defaultHeader(HttpHeaders.ACCEPT, MediaType.APPLICATION_JSON_VALUE)
-                .build();
+        this.restClient = restClientBuilder.baseUrl(baseUrl).build();
+        this.apiToken = apiToken;
+        this.enabled = enabled;
+        this.timeoutMs = timeoutMs;
     }
 
     @Override
     public List<NormalizedProductOffer> searchProducts(String query, String latitude, String longitude) {
-        log.info("Fetching products from QuickCommerce API at {} for query: '{}'", baseUrl, query);
+        log.info("Fetching quick-commerce offers for query '{}' (lat: {}, lng: {})", query, latitude, longitude);
+
         try {
-            QuickCommerceRawResponse rawResponse = restClient.get()
+            QuickCommerceRawResponse response = restClient.get()
                     .uri(uriBuilder -> uriBuilder
-                            .path("/api/v1/search")
-                            .queryParam("q", query)
+                            .path("/v1/search")
+                            .queryParam("query", query)
                             .queryParam("lat", latitude)
                             .queryParam("lng", longitude)
                             .build())
+                    .header("Authorization", "Bearer " + apiToken)
                     .retrieve()
                     .body(QuickCommerceRawResponse.class);
 
-            if (rawResponse == null || rawResponse.offers() == null) {
-                return Collections.emptyList();
+            if (response == null || response.offers() == null) {
+                log.warn("QuickCommerceAPI returned empty payload for query '{}'", query);
+                return List.of();
             }
 
-            return rawResponse.offers().stream()
+            return response.offers().stream()
                     .map(this::normalizeOffer)
                     .toList();
         } catch (Exception e) {
-            log.error("Failed to fetch product offers from QuickCommerce API: {}", e.getMessage());
-            throw new ProviderException("QuickCommerce API call failed: " + e.getMessage(), e);
+            log.error("Failed to fetch product offers from QuickCommerceAPI: {}", e.getMessage());
+            throw new RuntimeException("QuickCommerceAPI search failed", e);
         }
     }
 
     @Override
     public boolean supports(String providerCode) {
-        return PROVIDER_CODE.equalsIgnoreCase(providerCode);
+        return "quickcommerce".equalsIgnoreCase(providerCode) || "api".equalsIgnoreCase(providerCode) || "all".equalsIgnoreCase(providerCode);
+    }
+
+    @Override
+    public String getProviderCode() {
+        return "QUICKCOMMERCE";
+    }
+
+    @Override
+    public PlatformType getPlatformType() {
+        return PlatformType.QUICK_COMMERCE;
+    }
+
+    @Override
+    public boolean isEnabled() {
+        return enabled;
+    }
+
+    @Override
+    public long getTimeoutMs() {
+        return timeoutMs;
     }
 
     private NormalizedProductOffer normalizeOffer(QuickCommerceRawOffer raw) {
         BigDecimal price = raw.price() != null ? raw.price() : BigDecimal.ZERO;
         BigDecimal mrp = raw.mrp() != null ? raw.mrp() : price;
 
-        BigDecimal discountPct = BigDecimal.ZERO;
-        if (mrp.compareTo(BigDecimal.ZERO) > 0 && price.compareTo(mrp) < 0) {
-            discountPct = mrp.subtract(price)
-                    .divide(mrp, 4, RoundingMode.HALF_UP)
+        BigDecimal discountPercentage = BigDecimal.ZERO;
+        if (mrp.compareTo(BigDecimal.ZERO) > 0 && mrp.compareTo(price) > 0) {
+            discountPercentage = mrp.subtract(price)
                     .multiply(new BigDecimal("100"))
-                    .setScale(2, RoundingMode.HALF_UP);
+                    .divide(mrp, 2, RoundingMode.HALF_UP);
         }
 
+        String platformCode = raw.platformCode() != null ? raw.platformCode().toUpperCase() : "UNKNOWN";
+        String platformName = raw.platformName() != null ? raw.platformName() : platformCode;
+        boolean inStock = raw.inStock() != null && raw.inStock();
+        Integer etaMinutes = raw.etaMinutes() != null ? raw.etaMinutes() : 15;
+
         return new NormalizedProductOffer(
-                raw.platformCode() != null ? raw.platformCode() : "UNKNOWN",
-                raw.platformName() != null ? raw.platformName() : "Unknown Platform",
+                platformCode,
+                platformName,
+                PlatformType.QUICK_COMMERCE,
                 price,
                 mrp,
-                discountPct,
-                Boolean.TRUE.equals(raw.inStock()),
-                raw.etaMinutes() != null ? raw.etaMinutes() : 999,
+                discountPercentage,
+                inStock,
+                DeliveryEstimate.instant(etaMinutes),
+                platformName + " Hub",
                 raw.productUrl(),
                 raw.imageUrl()
         );
